# RealWorldClaw

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH-PLAN.md  LICENSE  Makefile  PLATFORM-PLAN.md  PROJECT.md  README.md  README_CN.md  ROADMAP.md  SECURITY.md  STRUCTURE.md  docker-compose.yml  pyproject.toml  quality-report.json  realworldclaw-github-readme.md  realworldclaw-research.md  realworldclaw-review-notes.md  realworldclaw-spec-hardware.md  realworldclaw-spec-infra.md  security-scan-results.json
platform/: .dockerignore  .env.example  .gitignore  ORDERS_SYSTEM_README.md  README.md  demo_agent.py  docker-compose.yml  feature_flags.py  fly.toml  printer_adapter.py  pyproject.toml  requirements.txt  ruff.toml  test_integration.py
platform/api/: api_keys.py  audit.py  auth.py  database.py  database_pg.py  deps.py  events.py  logging_config.py  main.py  middleware.py  notifications.py  pricing.py  rate_limit.py  security.py  ws_manager.py
platform/cli/: rwc.py
platform/printer/: __init__.py  bambu.py  bambu_test_manual.py  base.py  discovery.py  generic.py  moonraker.py  octoprint.py  test_bambu.py
platform/scripts/: backup.sh  do_migrate.py  migrate_sqlite_to_pg.py
platform/tests/: conftest.py  test_agent.py  test_agent_post_flow.py  test_agent_registration.py  test_agents.py  test_ai_agents.py  test_api.py  test_api_contract.py  test_audit_log.py  test_auth.py  test_community.py  test_devices.py  test_e2e_flow.py  test_e2e_v2.py  test_evolution.py  test_farms.py  test_feature_flags.py  test_files.py  test_makers.py  test_match.py  test_nodes.py  test_orders.py  test_performance.py  test_posts.py  test_proof.py  test_regression_matrix.py  test_websocket.py  test_ws_manager.py
platform/uploads/: c6bb6cfe-6347-4b47-b1f1-278f950178d4.stl  ed60f590-5ac6-4f1a-ae60-b80ff9b26007.stl
sdk/python/: README.md  pyproject.toml
(+817 files in other folders)
