[project]
name = "realworldclaw"
version = "0.1.0"
description = "RealWorldClaw Platform — Agent驱动的3D打印组件平台"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "structlog>=24.1.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "psutil>=5.9.0",
]

[project.scripts]
rwc = "cli.rwc:main"

[tool.setuptools.packages.find]
include = ["api*", "cli*", "skills*", "printer*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120
