[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realworldclaw"
version = "0.1.0"
description = "Python SDK for the RealWorldClaw Platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx", "ruff"]
